--- a/templates/atviksliðir.html
+++ b/templates/atviksliðir.html
@@ -5,15 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atviksliðir</title>
     <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet" />
-    <style>
-        .correct-phrases {
-            color: rgb(148, 43, 180);
-        }
-    </style>
     <script src="{{ url_for('static', filename='scripts/script.js') }}" defer></script>
 </head>
 <body>
-    <div class="container overlay-container">
+    <div class="container overlay-container atviksliðir">
         <div class="back-one-step-button" onclick="goBack()"></div>
         <h1 style="color: rgb(148, 43, 180);">Atviksliðir</h1>
         <div class="content">
