--- a/templates/nafnliðir.html
+++ b/templates/nafnliðir.html
@@ -27,22 +27,9 @@
             }
         }
     </script>
-    <style>
-        .hoverable-word {
-            cursor: pointer;
-            color: #ce8208;
-            text-decoration: underline;
-        }
-        .hoverable-word:hover {
-            color: #8e5d0e;
-        }
-        .correct-phrases {
-            color:#ce8208;
-        }
-    </style>
 </head>
 <body>
-    <div class="container overlay-container">
+    <div class="container overlay-container nafnliðir">
         <div class="back-one-step-button" onclick="goBack()"></div>
         <h1 style="color: #ce8208;"> Nafnliðir </h1>
         <div class="content">
@@ -70,7 +57,6 @@
             </form>
         </div>
 
-    <!-- Overlay -->
     {% if correct %}
     <div class="overlay" id="result-overlay" style="color: #ce8208;">
         <div class="back-one-step-button" onclick="goBack()"></div>
