--- a/templates/forsetningarliðir.html
+++ b/templates/forsetningarliðir.html
@@ -29,7 +29,7 @@
     </script>
 </head>
 <body>
-    <div class="container overlay-container">
+    <div class="container overlay-container forsetningarliðir">
         <div class="back-one-step-button" onclick="goBack()"></div>
         <h1 style="color: #ef0cbe;">Forsetningarliðir</h1>
         <div class="content">
