--- a/templates/atviksliðir.html
+++ b/templates/atviksliðir.html
@@ -5,7 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atviksliðir</title>
     <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet" />
-    <script src="{{ url_for('static', filename='scripts/script.js') }}" defer></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+        function displayMessageIfUnderlinedWords() {
+            const underlinedWords = document.querySelectorAll('.hoverable-word');
+            if (underlinedWords.length > 0) {
+                const message = document.createElement('p');
+                message.textContent = "Smelltu á undirstrikaða liðinn til að greina beygingarleg einkenni hans";
+                message.style.color = "black";
+                document.querySelector('.content').appendChild(message);
+
+                const overlay = document.querySelector('.overlay');
+                if (overlay) {
+                    const overlayMessage = document.createElement('p');
+                    overlayMessage.textContent = "Smelltu á undirstrikaða liðinn til að greina beygingarleg einkenni hans";
+                    overlayMessage.style.color = "black";
+                    overlay.appendChild(overlayMessage);
+                }
+            }
+        }
+    </script>
 </head>
 <body>
     <div class="container overlay-container atviksliðir">
@@ -22,6 +43,9 @@
             </form>
             {% if result %}
                 <p class="result">{{ result | safe }}</p>
+                <script>
+                    displayMessageIfUnderlinedWords();
+                </script>
             {% endif %}
         </div>
         <div class="button-container">
@@ -33,7 +57,6 @@
             </form>
         </div>
 
-        <!-- Result overlay -->
         {% if correct %}
         <div class="overlay" id="result-overlay" style="color:rgb(148, 43, 180);">
             <div class="back-one-step-button" onclick="goBack()"></div>
@@ -47,6 +70,7 @@
         </div>
         <script>
             document.getElementById('result-overlay').style.display = 'flex';
+            displayMessageIfUnderlinedWords();
         </script>
         {% endif %}
     </div>
